Sync test lists (1.5).
git-svn-id: http://fbug.googlecode.com/svn@4863 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/tests/content/testlists/firebug1.5.html
+++ b/tests/content/testlists/firebug1.5.html
@@ -80,12 +80,14 @@ var testList = [
     {group: "net",     uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoinits", testPage: "net/breakpoints/breakOnXHR.html" },
     {group: "html",    uri: "html/breakpoints/breakOnNext.js",         desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnNext.html"},
     {group: "html",    uri: "html/breakpoints/breakOnElement.js",      desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnElement.html"},
+    {group: "html",    uri: "html/onMutate.js",                        desc: "Html Mutation test", testPage: "html/onMutate.html"},
     {group: "search",  uri: "search/scriptPanelSearch.js",             desc: "Search within the Script panel" },
     {group: "search",  uri: "search/netPanelSearch.js",                desc: "Search within the Net panel", testPage: "search/netVictim.htm" },
     {group: "chrome",  uri: "chrome/1883/issue1883.js",                desc: "domplate.insertRows properties" },
     {group: "examples", uri: "examples/exampleTest.html",              desc: "Simple test example." },
     {group: "examples", uri: "examples/exampleNetTest.js",             desc: "Example of a Net panel test." },
     {group: "lib",      uri: "lib/parseURLParams.js",                  desc: "Verify FBL.parseURLParams method" },
+    {group: "lib",      uri: "lib/textSearch.js",                      desc: "Verify FBL.TextSearch" },
 ];
 </script>
 
