Rewrite FBTest to host test frame in 'browser' element so we can have a better chance to debug with Chromebug
git-svn-id: http://fbug.googlecode.com/svn@4904 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/content/testFrame.html
+++ b/fbtest/branches/fbtest1.5/content/testFrame.html
@@ -2,8 +2,16 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head></head>
+<head>
+<style>
+body {
+    background-color: white;
+    }
+</style>
+</head>
 <body>
-<h1>Test frames go here</h1>
+<h1 id="testTitle">Test Driver Code Loads Here</h1>
+<span id="firebugTestElement"></span>
 </body>
+
 </html>
