--- a/fbtest/branches/fbtest1.5/content/wrapAJSFile.html
+++ b/fbtest/branches/fbtest1.5/content/wrapAJSFile.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Firebug Test Page HTML Wrapper</title>
-<script type="application/x-javascript" src="__FBTestFirebugURL__"></script>
+<script type="application/x-javascript" src="chrome://fbtest/content/FBTestFirebug.js"></script>
 <script type="application/x-javascript" src="__TestDriverURL__"></script>
 </head>
 <body>
