--- a/extensions/fireformat/branches/fireformat1.0/test/testList.html
+++ b/extensions/fireformat/branches/fireformat1.0/test/testList.html
@@ -1,4 +1,4 @@
-﻿﻿﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿﻿﻿﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -27,7 +27,9 @@ var serverURI = "chrome://fireformat-test/content/";
  *                              "fails": - it's not blocking bug if the test fails.
  */
 var testList = [
-    {group: "formatter", uri: "formatter/cssFormatterTest.js",          desc: "Formatter: CSS Formatter Test" }
+                {group: "formatter", uri: "formatter/wrapTokensTest.js",          desc: "Formatter: Wrap Tokens Test" },
+                {group: "cssFormatter", uri: "formatter/cssFormatter/selectorTextTest.js",          desc: "CSS Formatter: Selector Text Test" },
+                {group: "cssFormatter", uri: "formatter/cssFormatterTest.js",          desc: "CSS Formatter: CSS Formatter Test" }
 ];
 /*
  * Test cases needed:
